add section about

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
     <title>Amanda Azevedo</title>
     
 </head>
-<body>
+<body class="fw-bolder">
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand d-flex" href="#home">
             <img src="./assets/cupcake.png" alt="logo cupcake" style="width: 50px;" class="mx-2">
@@ -46,24 +46,50 @@
       </nav>
     </header>
 
-      <main class="container h-100">
+      <main class="h-100">
         <section id="home" class="h-100 d-flex align-items-center">
-        <div class="">
-            <p>Olá, eu sou</p>
-            <p>Amanda Azevedo</p>
-            <p>Front End Developer</p>
-            <p>Desenvolvimento Web - Programação de sites responsivos usando CMS Wordpress, Landing Pages, Lojas Virtuais,
+        <div id="text-home" class="">
+            <p class="fs-3 text-light">Olá, eu sou</p>
+            <h1 id="text-name">AMANDA<span class="text-light ps-3">AZEVEDO</span></h1>
+            <p class="fs-3">Front End Developer</p>
+            <p class="fs-5">Desenvolvimento Web - Programação de sites responsivos usando CMS Wordpress, Landing Pages, Lojas Virtuais,
             e Montagem de Email-Marketing, Para saber mais entre em contato.</p>
         </div> 
         </section>
-        <section id="about" class="h-100">  
-            <h1>Sobre mim</h1>
+        <section id="about" class="container h-100">  
+            <h1 class="text-uppercase fw-bold text-light">
+             < Sobre mim >
+            </h1>
+          <div class="d-flex">
+            <div class="pe-4 py-5">
+              <p class="fs-4 py-5"> Desenvolvedora Front End cursando Ciências da Computação pela Estácio</p>
+              <p class="fs-5">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Vestibulum laoreet velit in placerat dignissim. Vivamus ullamcorper, 
+                justo sit amet euismod cursus, lorem orci varius libero, et porttitor 
+                ex massa eget purus. Maecenas turpis enim, feugiat non ex quis,
+                volutpat luctus risus. Sed est enim, consectetur id maximus non, 
+                luctus sed ligula. Donec tincidunt ultrices est non rutrum. 
+                Nunc dolor velit, suscipit eget eros at, maximus viverra risus. 
+                Donec vitae dolor lobortis, sollicitudin magna et, sagittis arcu. 
+                In sem mi, lobortis vitae auctor euismod, eleifend a tellus. 
+                Nam pretium purus eget blandit dignissim. Nam ut vulputate metus.
+              </p>
+            </div>
+            <div>
+              <img class="img-thumbnail" src="./assets/img-sobre-mim.jpeg" alt="imagem sobre mim">
+            </div>
+          </div>
         </section>
         <section id="projects" class="h-100">  
-            <h1>Projetos</h1>
+            <h1 class="container text-uppercase fw-bold text-light">
+             < Projetos >
+            </h1>
         </section>
         <section id="contact" class="h-100">  
-            <h1>Contato</h1>
+            <h1 class="container text-uppercase fw-bold text-light">
+             < Contato >
+            </h1>
         </section>
       </main>
 
