--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
               </p>
             </div>
             <div>
-              <img class="img-thumbnail" src="./assets/img-sobre-mim.jpeg" alt="imagem sobre mim">
+              <img id="img-about" class="img-thumbnail my-5" src="./assets/img-sobre-mim.jpeg" alt="imagem sobre mim">
             </div>
           </div>
         </section>
